Fix double overflow scroll

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,19 @@ html, body {
   /* justify-content: center;
   align-items: center; */
   border: 1px solid #ccc;
+
+  /* width: 30vw;
+  max-width: 480px;
+  min-width: 242px;
+  height: 99vh; */
+}
+
+.main {
+  height: 78%;
+  width: 100%;
+  background-color: transparent;
+  overflow: scroll;
+  overflow-x: hidden;
 }
 
 .header {
@@ -27,14 +40,6 @@ html, body {
   font-size: 1em;
   font-weight: normal;
   color: 	#0E4C92;
-}
-
-.main {
-  height: 78%;
-  max-height: 400px;
-  width: 100%;
-  background-color: transparent;
-  overflow: scroll;
 }
 
 .navbar {
@@ -66,7 +71,7 @@ h3 {
   height: 100%;
   margin: 0 1.5em;
   padding-right: 8px;
-  overflow: scroll;
+  /* overflow: scroll; */
 }
 
 .bottom-margin {
